UIDevTools: Track aura window deletion for cleanup

UI DevTools track aura's WindowTreeHost initialization to track
all the windows created as root windows. However, we didn't track
their deletion for proper cleanup. So it is possible that when we
use those root windows to create children and trees, some of them
were already released which caused crashes.

This CL adds tracking of windows being destroyed, so that we can
properly remove the window from our list.

BUG=896470

Change-Id: I5411001c4c30fea6703d76ae6be8bed61259fce7
Reviewed-on: https://chromium-review.googlesource.com/c/1289706
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601692}
Former-commit-id: c6cca2e3316e1c0a0198cc8659365a08b3b6fa9d