components/ui_devtools/views/dom_agent_aura.h
@@ -9,6 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/ui_devtools/DOM.h"
 #include "components/ui_devtools/dom_agent.h"
 #include "ui/aura/env_observer.h"
+#include "ui/aura/window_observer.h"
 #include "ui/views/view.h"
 #include "ui/views/widget/widget.h"
 
@@ -18,7 +19,9 @@ class Window;
 
 namespace ui_devtools {
 
-class DOMAgentAura : public DOMAgent, public aura::EnvObserver {
+class DOMAgentAura : public DOMAgent,
+                     public aura::EnvObserver,
+                     public aura::WindowObserver {
  public:
   DOMAgentAura();
   ~DOMAgentAura() override;
@@ -31,6 +34,9 @@ class DOMAgentAura : public DOMAgent, public aura::EnvObserver {
   // aura::EnvObserver:
   void OnWindowInitialized(aura::Window* window) override {}
   void OnHostInitialized(aura::WindowTreeHost* host) override;
+
+  // aura::WindowObserver:
+  void OnWindowDestroying(aura::Window* window) override;
 
   std::unique_ptr<protocol::DOM::Node> BuildTreeForWindow(
       UIElement* window_element_root,
